force-app/main/default/objects/HAM_Meta_Data__mdt/HAM_Meta_Data__mdt.object-meta.xml
<CustomObject>
    <label>HAM Meta Data</label>
    <pluralLabel>HAM Meta Data</pluralLabel>
</CustomObject>