force-app/main/default/objects/HAM_Meta_Data__mdt/fields/HAM_Display_Label__c.field-meta.xml
<CustomField>
    <fullName>HAM_Display_Label__c</fullName>
    <label>HAM Display Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>