force-app/main/default/objects/HAM_Meta_Data__mdt/fields/HAM_Field_API__c.field-meta.xml
<CustomField>
    <fullName>HAM_Field_API__c</fullName>
    <label>HAM Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>