force-app/main/default/objects/HAM_Meta_Data__mdt/fields/HAM_Level_2__c.field-meta.xml
<CustomField>
    <fullName>HAM_Level_2__c</fullName>
    <label>HAM Level 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>