force-app/main/default/objects/HAM_Meta_Data__mdt/fields/HAM_Redirect_Link__c.field-meta.xml
<CustomField>
    <fullName>HAM_Redirect_Link__c</fullName>
    <label>HAM Redirect Link</label>
    <type>Url</type>
</CustomField>