force-app/main/default/objects/HAM_Meta_Data__mdt/fields/HAM_Section_Order__c.field-meta.xml
<CustomField>
    <fullName>HAM_Section_Order__c</fullName>
    <label>HAM Section Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>